--- a/src/components/Menu.module.css
+++ b/src/components/Menu.module.css
@@ -17,7 +17,8 @@
     position: absolute;
     width: 100%;
     margin-top: 17%;
-    box-shadow: 0 30px 10px -10px rgba(0, 0, 0, 0.6), 0 -30px 10px -10px rgba(0, 0, 0, 0.6);
+    box-shadow: inset 0 20px 10px -10px rgba(0, 0, 0, 0.6),
+        inset 0 -20px 10px -10px rgba(0, 0, 0, 0.6);
     height: 55%;
     transition: left 3s ease;
     /* border: 5px solid red; */
