segregated components into folders

--- a/src/components/BACKGROUND/Background.module.css
+++ b/src/components/BACKGROUND/Background.module.css
@@ -1,5 +1,5 @@
 .background{
-    background-image: url('../images2/tlo5.jpg');
+    background-image: url('../../images2/tlo5.jpg');
     background-size: 400px;
     background-repeat: repeat;
     position: absolute;
