--- a/src/components/MENU/Menu.module.css
+++ b/src/components/MENU/Menu.module.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: viper-font;
-    src: url(../Myfont2.ttf);
+    src: url(../../Myfont2.ttf);
   }
   html{
     overflow: hidden;
