made lever into a button for keyboard only users

--- a/src/components/BUTTONS/Lever.module.css
+++ b/src/components/BUTTONS/Lever.module.css
@@ -1,13 +1,5 @@
 .lever{
-    position: absolute;
-    left: 2vw;
-    top: 6vh;
-    width: 12vw;
-    height: 12vw;
-    /* background-image: url(../images/leverUp.png); */
+    height: 100%;
+    width: 100%;
     transform: rotateY(180deg);
-    background-size: cover;
-    background-position: center;
-    cursor: grab;
-    /* border: 5px solid blue; */
 }
