made everything keyboard friendly

--- a/src/components/BACKGROUND/Background.module.css
+++ b/src/components/BACKGROUND/Background.module.css
@@ -8,11 +8,17 @@
 }
 
 .title{
+    height: 100%;
+}
+
+.titleButton{
     height: 30%;
     position: fixed;
     left: 50%;
     transform: translate(-50%, 0);
     cursor: wait;
+    background: none;
+    border: none;
 }
 
 .title:hover{
