--- a/src/components/BUTTONS/Lever.module.css
+++ b/src/components/BUTTONS/Lever.module.css
@@ -3,3 +3,14 @@
     width: 100%;
     transform: rotateY(180deg);
 }
+
+.leverButton{
+    position: absolute;
+    left: 2vw;
+    top: 6vh;
+    width: 12vw;
+    height: 12vw;
+    background: none;
+    border: none;
+    cursor: grab;
+}
