--- a/src/components/MENU/MenuItem.module.css
+++ b/src/components/MENU/MenuItem.module.css
@@ -1,18 +1,3 @@
-.menuItem{
-    width: 15%;
-    padding-top: 1.8%;
-    transition: 0.05s linear;
-    /* border: 5px solid blue; */
-}
-
-.menuItem:hover{
-    /* width: 22%; */
-    flex-grow: 0.65;
-    cursor: pointer;
-    /* border: 5px solid blue; */
-    /* animation: expand 1s linear; */
-}
-
 .menuItemPhoto{
     width: 100%;
     /* box-shadow: 0 0 20px 5px rgba(255, 255, 255, 0.3); */
@@ -35,3 +20,19 @@
         width: 25%;
     }
 }
+
+.menuItem{
+    width: 15%;
+    padding-top: 1.8%;
+    transition: 0.05s linear;
+    background: none;
+    border: none;
+    /* border: 5px solid blue; */
+  }
+  .menuItem:hover{
+    /* width: 22%; */
+    flex-grow: 0.65;
+    cursor: pointer;
+    /* border: 5px solid blue; */
+    /* animation: expand 1s linear; */
+  }
