--- a/src/components/MENU/MenuItem.module.css
+++ b/src/components/MENU/MenuItem.module.css
@@ -33,6 +33,15 @@
     /* width: 22%; */
     flex-grow: 0.65;
     cursor: pointer;
+    animation: hueRotate 0.5s linear infinite;
     /* border: 5px solid blue; */
     /* animation: expand 1s linear; */
   }
+  @keyframes hueRotate{
+    from{
+        filter: hue-rotate(0);
+    }
+    to{
+        filter: hue-rotate(360deg);
+    }
+}
