blog page with animations + added some colors

--- a/src/components/MENU/MenuItem.module.css
+++ b/src/components/MENU/MenuItem.module.css
@@ -8,7 +8,7 @@
     font-size: 4vh;
     font-family: viper-font;
     text-align: center;
-    color: rgb(218, 171, 19);
+    color: goldenrod;
     white-space: nowrap;
 }
 
