--- a/src/components/STORE/Store.module.css
+++ b/src/components/STORE/Store.module.css
@@ -19,14 +19,20 @@
 }
 
 .store{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+}
+
+.backdrop{
     background-image: url('../../images2/tlo5.jpg');
-    /* background-color: aquamarine; */
     background-size: 400px;
     background-repeat: repeat;
     position: absolute;
     width: 100%;
     height: 100%;
-    z-index: 10;
+    filter: hue-rotate(72deg);
 }
 
 .storeAppear{
@@ -75,7 +81,7 @@
     position: absolute;
     font-family: viper-font;
     font-size: 60px;
-    color: rgb(218, 171, 19);
+    color: goldenrod;
     width: 60px;
     height: 60px;
     border: none;
@@ -95,7 +101,7 @@
     font-size: 100px;
     border: none;
     background: none;
-    color:rgb(218, 171, 19);
+    color:goldenrod;
     z-index: 11;
 
 }
@@ -108,7 +114,7 @@
     font-size: 100px;
     border: none;
     background: none;
-    color:rgb(218, 171, 19);
+    color:goldenrod;
     z-index: 11;
 }
 .previous:hover{
