fixed text box on blog page, static background

--- a/src/components/BACKGROUND/Background.module.css
+++ b/src/components/BACKGROUND/Background.module.css
@@ -1,6 +1,6 @@
 .background{
     background-image: url('../../images2/tlo5.jpg');
-    background-size: 400px;
+    background-size: 50vh;
     background-repeat: repeat;
     position: absolute;
     width: 100%;
