--- a/src/components/STORE/Store.module.css
+++ b/src/components/STORE/Store.module.css
@@ -27,7 +27,8 @@
 
 .backdrop{
     background-image: url('../../images2/tlo5.jpg');
-    background-size: 400px;
+    background-size: 50vh;
+    /* background-size: 400px; */
     background-repeat: repeat;
     position: absolute;
     width: 100%;
