--- a/src/components/BLOG/BlogPost.module.css
+++ b/src/components/BLOG/BlogPost.module.css
@@ -19,7 +19,7 @@
     height: 50vh;
     opacity: 85%;
     text-align: center;
-    overflow: scroll;
+    overflow: hidden;
     /* border: 1px solid red; */
 }
 
@@ -33,7 +33,7 @@
     font-size: 20px;
     font-family: 'Courier New', Courier, monospace;
     font-weight: 800;
-    overflow: scroll;
+    overflow: hidden;
 }
 
 .image{
