--- a/src/components/MENU/Menu.module.css
+++ b/src/components/MENU/Menu.module.css
@@ -17,7 +17,8 @@
     gap: 10%;
     position: absolute;
     width: 100%;
-    margin-top: 17%;
+    /* margin-top: 17%; */
+    bottom: 10%;
     box-shadow: inset 0 20px 10px -10px rgba(0, 0, 0, 0.6),
         inset 0 -20px 10px -10px rgba(0, 0, 0, 0.6);
     height: 55%;
