--- a/src/components/BLOG/BlogPost.module.css
+++ b/src/components/BLOG/BlogPost.module.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     padding: 8%;
-    gap: 10%;
+    gap: 13%;
     align-items: center;
     /* border: 1px solid red; */
 }
@@ -19,22 +19,27 @@
     height: 50vh;
     opacity: 85%;
     text-align: center;
-    overflow: hidden;
+    overflow: scroll;
+    scrollbar-width: none;
     /* border: 1px solid red; */
+}
+
+.right::-webkit-scrollbar { 
+    display: none;
 }
 
 .title{
     font-family: viper-font;
-    font-size: 50px;
+    font-size: 6vh;
     margin-top: -0.2vh;
 }
 
 .text{
-    font-size: 20px;
+    font-size: 2.5vh;
     font-family: 'Courier New', Courier, monospace;
     font-weight: 800;
-    overflow: hidden;
 }
+
 
 .image{
     width: 100%;
