--- a/src/components/GALLERY/Gallery.module.css
+++ b/src/components/GALLERY/Gallery.module.css
@@ -24,7 +24,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    transition: bottom 1s linear;
+    transition: bottom 0.7s ease-in;
 }
 
 .button{
