--- a/src/components/GALLERY/GalleryItem.module.css
+++ b/src/components/GALLERY/GalleryItem.module.css
@@ -53,5 +53,11 @@
     font-family: 'Courier New', Courier, monospace;
     font-weight: 600;
     padding: 0 10% 0 10%;
+    overflow: scroll;
+    scrollbar-width: none;
+}
+
+.text::-webkit-scrollbar { 
+    display: none;
 }
 
