--- a/src/components/BLOG/BlogPost.module.css
+++ b/src/components/BLOG/BlogPost.module.css
@@ -10,7 +10,7 @@
 .left{
     width: 50%;
     opacity: 90%;
-    filter: blur(0.5px);
+    /* filter: blur(0.5px); */
     /* border: 1px solid red; */
 }
 
