add linting (at last), homepage mobile layout

--- a/src/components/MENU/MenuItem.module.css
+++ b/src/components/MENU/MenuItem.module.css
@@ -25,7 +25,14 @@
     transition: 0.05s linear;
     background: none;
     border: none;
-  }
+}
+
+@media (max-width: 991px){
+    .menuItem{
+        padding: 0;
+        width: 50%;
+    }
+}
 
   .menuItem:hover{
     flex-grow: 0.65;
