--- a/src/components/LAYOUT/Layout.module.css
+++ b/src/components/LAYOUT/Layout.module.css
@@ -1,24 +1,36 @@
 .background{
     background-image: url('../../images2/tlo5.jpg');
-    background-size: 50vh;
+    background-size: 40vh;
     background-repeat: repeat;
     position: absolute;
-    width: 100%;
-    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
 }
+
 
 .title{
     height: 100%;
 }
 
-.titleButton{
-    height: 30%;
+
+.header{
     position: fixed;
-    left: 50%;
-    transform: translate(-50%, 0);
+    top: 0;
+    display: flex;
+    justify-content: center;
+    height: 25vh;
+    width: 100%;
     cursor: wait;
-    background: none;
     border: none;
+}
+@media (max-width: 991px) {
+    .header{
+        height: 15vh;
+        background-color: rgba(0, 0, 0, 0.6);
+    }
 }
 
 .title:hover{
