--- a/src/components/MENU/Menu.module.css
+++ b/src/components/MENU/Menu.module.css
@@ -21,3 +21,24 @@
     height: 55%;
     transition: visibility 0.7s, left 0.7s ease;
 }
+
+.menuColumn{
+    position: absolute;
+    top: 15vh;
+    height: 85vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 3%;
+    width: 100%;
+    overflow: scroll;
+    border: 2px red;
+}
+
+.menuColumn::after{
+  content: "x\00000ad\00000ad\00000ad";
+  display: block;
+  visibility: hidden;
+  height: 200px;
+  width: 20px;
+}
