--- a/src/components/LAYOUT/Layout.module.css
+++ b/src/components/LAYOUT/Layout.module.css
@@ -26,7 +26,7 @@
     cursor: wait;
     border: none;
 }
-@media (max-width: 991px) {
+@media (orientation: portrait) {
     .header{
         height: 15vh;
         background-color: rgba(0, 0, 0, 0.6);
