--- a/src/components/MENU/MenuItem.module.css
+++ b/src/components/MENU/MenuItem.module.css
@@ -1,5 +1,7 @@
 .menuItemPhoto{
-    width: 100%;
+    /* width: 100%; */
+    max-width: 100%;
+    max-height: 40vh;
 }
 
 .menuItemTitle{
@@ -21,7 +23,7 @@
 
 .menuItem{
     width: 15%;
-    padding-top: 1.8%;
+    max-height: 50vh;
     transition: 0.05s linear;
     background: none;
     border: none;
@@ -30,7 +32,10 @@
 @media (max-width: 991px){
     .menuItem{
         padding: 0;
-        width: 50%;
+        width: 100%;
+        /* background-color:rgba(0, 0, 0, 0.3); */
+        /* box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 1); */
+        padding-bottom: 1rem;
     }
 }
 
