--- a/src/components/STORE/Store.module.css
+++ b/src/components/STORE/Store.module.css
@@ -12,13 +12,25 @@
   transition: visibility 0.7s, left 0.7s ease ;
 }
 
+.items{
+    position: absolute;
+    top: 15vh;
+    height: 85vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 3%;
+    width: 100%;
+    overflow: scroll;
+}
+
 .store{
     position: absolute;
     width: 100%;
     height: 100%;
     z-index: 10;
 }
-
+/* 
 .backdrop{
     background-image: url('../../images2/tlo5.jpg');
     background-size: 50vh;
@@ -27,7 +39,7 @@
     width: 100%;
     height: 100%;
     filter: hue-rotate(72deg);
-}
+} */
 
 .storeAppear{
     opacity: 0;
@@ -127,6 +139,14 @@
     cursor: wait;
     background: none;
     border: none;
+}
+
+@media (orientation: portrait) {
+    .titleButton{
+        height: 15vh;
+        background-color: rgba(0, 0, 0, 0.6);
+        width: 100%;
+    }
 }
 
 .title:hover{
