--- a/src/components/GALLERY/Gallery.module.css
+++ b/src/components/GALLERY/Gallery.module.css
@@ -6,21 +6,22 @@
     overflow: hidden;
 }
 
-.backdrop{
-    background-image: url('../../images2/tlo5.jpg');
-    background-size: 50vh;
-    background-repeat: repeat;
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    filter: grayscale(150%) brightness(50%);
-}
-
 .container{
     position: absolute;
     width: 100%;
     height: 100%;
     transition: bottom 0.7s ease-in;
+}
+
+.items{
+    position: absolute;
+    top: 15vh;
+    height: 85vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    overflow: scroll;
 }
 
 .button{
@@ -196,6 +197,37 @@
     background: none;
     border: none;
     z-index: 15;
+}
+
+.titleBackground{
+    position: absolute;
+    width: 100vw;
+    height: 15vh;
+    z-index: 0;
+    background-color: rgba(0, 0, 0, 0.6);
+    top: 0;
+}
+
+@media (orientation: portrait){
+    .titleButton{
+        position: absolute;
+        z-index: 10;
+        height: 15vh;
+        width: 100%;
+    }
+
+    .light1{
+        right: -2vw;
+        top: -17vw;
+        width: 50vh;
+        filter: brightness(100%);
+        transform:  scale(1, -1);
+        z-index: 5;
+    }
+    
+    .light2{
+        display: none;
+    }
 }
 
 .title:hover{
